--- a/styles/style.css
+++ b/styles/style.css
@@ -29,12 +29,20 @@ main {
 
 #logoContainer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     margin-top: 145px;
 }
 
 #googleLogo {
     margin: auto;
+}
+
+h3 {
+    margin: auto;
+    color: #4285f4;
+    font: 16px/16px roboto-regular, arial, sans-serif;
+    padding-left: 210px;
 }
 
 #formContainer {
