--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,13 @@
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .navBarContainer {
-    width: 100%;
     display: flex;
     min-width: 405px;
     justify-content: right;
+    height: 60px;
 }
 
 @media (max-width: 405px) {
@@ -12,15 +16,36 @@
     }
 }
 
+#advancedNavBar {
+    background: #f1f1f1;
+}
+
+#googleLogoAdvanced {
+    position: absolute;
+    height: 30px;
+    left: 0;
+    margin-top: 18px;
+    margin-left: 15px;
+    
+}
+
 .navLink {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
     color: rgba(0,0,0,.87);
     text-decoration: none;
     line-height: 24px;
     vertical-align: middle;
     text-align: right;
     font-size: 13px;
-    margin: 10px 15px;
+    padding: 17px 0;
+    margin: 0px 15px;
+}
+
+#advancedTitle {
+    color: #d93025;
+    font-size: 20px;
+    padding: 25px 35px;
+    border-bottom: 1px solid #ebebeb;
 }
 
 main {
@@ -38,12 +63,14 @@ main {
     margin: auto;
 }
 
+
+
 h3 {
     margin: auto;
     color: #4285f4;
-    font: 16px/16px roboto-regular, arial, sans-serif;
     padding-left: 210px;
 }
+
 
 #formContainer {
     margin: 25px auto;
@@ -102,7 +129,7 @@ h3 {
     border: 1px solid #f8f9fa;
     border-radius: 4px;
     color: #3c4043;
-    font-family: arial,sans-serif;
+    /* font-family: arial,sans-serif; */
     font-size: 14px;
     margin: 11px 4px;
     padding: 0 16px;
@@ -123,6 +150,85 @@ h3 {
 
 }
 
+#findPagesWith {
+    height: 42px;
+    margin: 40px 0 0px 45px;
+}
+
+#formGrid {
+    display: grid;
+    color: #222;
+    font-size: small;
+    margin: 0px 45px;
+    grid-template-columns: 182px minmax(170px, 570px) 381px;
+
+}
+
+.advancedSearchBox {
+    border-radius: 1px;
+    border: 1px solid #d9d9d9;
+    height: 25px;
+    padding: 1px 8px;
+    font-size: 13px;
+}
+
+.advancedSearchBox:focus {
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+    border: 1px solid #4d90fe;
+    outline: none;
+}
+
+.textExplanation {
+    color: #666;
+    font-family: monospace;
+    font-size: 11px;
+    margin: 0 0 8px 10px;
+}
+
+@media (max-width: 1060px) {
+    .textExplanation {
+        visibility: hidden;
+        height: 0;
+        width: 0;
+    }
+}
+
+@media (max-width: 360px) {
+    #findPagesWith {
+        margin: 40px 0 40px 45px;
+    }
+    #formGrid{
+        grid-template-columns: 1fr;
+    }
+    .advancedSearchBox {
+        width: 50%;
+    }
+}
+
+#submitAdvancedContainer {
+    margin-top: 10px;
+    height: 30px;
+}
+
+#submitAdvanced {
+    height: 100%;
+    float: right;
+    box-shadow: none;
+    background-color: #4d90fe;
+    border: 1px solid #3079ed;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 11px;
+    font-weight: bold;
+    text-align: center;
+
+}
+
+#submitAdvanced:hover {
+    background-color: #357ae8;
+    border: 1px solid #2f5bb7
+}
+
 #offerContainer {
     display: flex;
     justify-content: center;
@@ -131,7 +237,7 @@ h3 {
 #googleOffered {
     font-size: small;
     color: #202124;
-    font-family: arial, sans-serif;
+    /* font-family: arial, sans-serif; */
     line-height: 20px;
 }
 
@@ -139,7 +245,7 @@ h3 {
     padding: 0 3px;
     color: #1a0dab;
     text-decoration: none;
-    font-family: arial, sans-serif;
+    /* font-family: arial, sans-serif; */
     font-size: small;
     line-height: 20px;
 
@@ -149,7 +255,7 @@ footer {
     background-color: #f2f2f2;
     font-size: 14px;
     color:rgba(0,0,0,.54);
-    font-family: arial, sans-serif; 
+    /* font-family: arial, sans-serif;  */
     position: absolute;
     bottom: 0;
     left: 0;
